# week03-b/src/models/kit.js
@@ -1,75 +1,36 @@
 module.exports = (mongoose) => {
   const userSchema = mongoose.Schema({
-    NameKit: {
-      type: String
-    },
-    product1: {
-      Name: String
-    },
-    product2: {
-      Name: String
-    },
-    product3: {
-      Name: String
-    },
-    product4: {
-      Name: String
-    },
-    product5: {
-      Name: String
-    },
-    product6: {
-      Name: String
-    },
-    product7: {
-      Name: String
-    },
-    product8: {
-      Name: String
-    },
-    product9: {
-      Name: String
-    },
-    product10: {
-      Name: String
-    },
-    product11: {
-      Name: String
-    },
-    product12: {
-      Name: String
-    },
-    product13: {
-      Name: String
-    },
-    product14: {
-      Name: String
-    },
-    product15: {
-      Name: String
-    },
-    product16: {
-      Name: String
-    },
-    product17: {
-      Name: String
-    },
-    product18: {
-      Name: String
-    },
-    product19: {
-      Name: String
-    },
-    product20: {
-      Name: String
-    },
-    product21: {
-      Name: String
-    },
+    NameKit: String,
+    Content: [
+      {
+        product1: String,
+        product2: String,
+        product3: String,
+        product4: String,
+        product5: String,
+        product6: String,
+        product7: String,
+        product8: String,
+        product9: String,
+        product10: String,
+        product11: String,
+        product12: String,
+        product13: String,
+        product14: String,
+        product15: String,
+        product16: String,
+        product17: String,
+        product18: String,
+        product19: String,
+        product20: String,
+        product21: String
+      }
+    ],
     TotalPrice: {
       type: Number
     }
   }, { versionKey: false, autoIndex: false })
+
 
   return mongoose.model('kits', userSchema)
 }
