# week03-b/src/routes/index.js
@@ -2,6 +2,8 @@ const express = require('express')
 const router = express.Router()
 const { ensureAuth, ensureGuest } = require('../middelware/auth')
 
+const Idea = require('../models/Idea')
+
 
 // @desc Login/Landing page
 // @route GET/
@@ -13,10 +15,18 @@ router.get('/', ensureGuest, (req, res) => {
 
 // @desc Dashboard
 // @route GET/Dashboard
-router.get('/dashboard', ensureAuth, (req, res) => {
-  res.render('dashboard', {
-    name: req.user.firstName
-  })
+router.get('/dashboard', ensureAuth, async (req, res) => {
+  try {
+    const ideas = await Idea.find({ user: req.user.id }).lean()
+    res.render('dashboard', {
+      name: req.user.firstName,
+      ideas
+    })
+  } catch (err) {
+    console.error(err)
+    res.render('error/500')
+  }
+
 })
 
 //router.use('/', require('./auth'))
